# AboFGO

./: CMakeLists.txt  README.md  main.cpp
include/: Factor.h  FactorGraph.h  GNSSFactor.h  IMUFactor.h  optimizer.h
python/: pyabofgo.cpp
src/: FactorGraph.cpp  GNSSFactor.cpp  IMUFactor.cpp
